[tool.poetry]
name = "onewechat"
version = "0.0.0"
description = "OneBot12 API for WeChat Personal Accounts"
authors = ["coming <kangming06@hotmail.com>"]
license = "AGPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
